--- a/views/proximos.erb
+++ b/views/proximos.erb
@@ -23,10 +23,14 @@
         </div>
         <br>
         <div class="w3-container w3-leftbar w3-border-cyan w3-light-blue">
+            <a href="https://www.facebook.com/buenacosechabanda/" target="_blank" class="quitar"></a>
             <h3>
                 Viernes 21 de Octubre en la Fiesta de la Flor (Suipacha 842 CABA), 23 hs, $50 anticipadas $70 en puerta</h3>
         </div>
         <br>
+        <div class="w3-display-container">
+            <img src="/imagenes/galeria/fechas/flyersalon.jpg" class="w3-animate-bottom" align="middle" width="700px" height="450px">
 
+        </div>
     </body>
 </html>
