--- a/views/multimedia.erb
+++ b/views/multimedia.erb
@@ -1,25 +1,38 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <style type="text/css">
-        .quitar {
-            text-decoration: none;
-        }
-    </style>
-    <title>Buena Cosecha, Ska Reggae | Música</title>
-  </head>
+    <head>
+        <meta charset="utf-8">
+        <style type="text/css">
+            .quitar {
+                text-decoration: none;
+            }
 
-  <br>
-  <br>
-  <br>
+        </style>
+        <title>Buena Cosecha, Ska Reggae | Música</title>
+    </head>
 
-  <body>
-    <ul>
-      <a href="audios" class="quitar"><li> Audios </li></a>
-      <a href="videos" class="quitar"><li> Videos </li></a>
-      <a href="letras" class="quitar"><li> Letras </li></a>
-    </ul>
+    <br>
+    <br>
+    <br>
 
-  </body>
+    <body>
+        <div class="w3-container w3-leftbar w3-border-deep-orange w3-orange">
+            <a href="audios" class="quitar">
+                <h3>Audios</h3>
+            </a>
+        </div>
+
+        <div class="w3-container w3-leftbar w3-border-cyan w3-light-blue">
+            <a href="videos" class="quitar">
+                <h3>Videos</h3>
+            </a>
+        </div>
+
+        <div class="w3-container w3-leftbar w3-border-dark-grey w3-grey">
+            <a href="letras" class="quitar">
+                <h3>Letras</h3>
+            </a>
+        </div>
+
+    </body>
 </html>
