--- a/views/proximos.erb
+++ b/views/proximos.erb
@@ -29,7 +29,7 @@
         </div>
         <br>
         <div class="w3-display-container">
-            <img src="/imagenes/galeria/fechas/flyersalon.jpg" class="w3-animate-bottom" align="middle" width="700px" height="450px">
+            <img src="/imagenes/galeria/fechas/flyersalon.jpg" alt="flyersalon" align="middle" width="700px" height="450px">
 
         </div>
     </body>
