index.erb agregado facu

--- a/views/index.erb
+++ b/views/index.erb
@@ -123,7 +123,7 @@
                 <p class="w3-opacity">
                     <i>Fiesta! ue ue uep !</i>
                 </p>
-                <p class="w3-justify">La banda está conformada por Beto en guitarra y voz, Uriel en bateria, Hernán en guitarra, Danilo en bajo, Romina en trombon, Daniel en el saxo, Gastón en trompeta y Melina en percusión
+                <p class="w3-justify">La banda está conformada por Beto en guitarra y voz, Uriel en bateria, Hernán en guitarra, Danilo en bajo, Romina en trombon, Daniel en el saxo, Gastón en trompeta, Melina en percusión y Facundo en teclados
                 </p>
                 <div class="w3-row w3-padding-32">
                     <div class="w3-third">
@@ -154,81 +154,82 @@
                         <p>Daniel</p>
                         <img src="/imagenes/perfil/walterperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
                     </div>
-
-                    <div class="w3-row w3-padding-32">
-                        <div class="w3-third">
-                            <p>Gaston</p>
-                            <img src="/imagenes/perfil/gastonperfil.jpg" class="w3-round" alt="Random Name" style="width:60%">
-                        </div>
-                        <div class="w3-third">
-                            <p>Melina</p>
-                            <img src="/imagenes/perfil/melinaperfil.jpg" class="w3-round" alt="Random Name" style="width:60%">
-                        </div>
-                        <div class="w3-third">
-                            <p>Facundo</p>
-                            <img src="/imagenes/perfil/facuperfil.jpg" class="w3-round" alt="Random Name" style="width:60%">
-                        </div>
-                    </div>
                 </div>
 
-                <!-- The Tour Section -->
-            </div>
-        </div>
-    </div>
-
-    <!-- The Contact Section -->
-    <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
-        <h2 class="w3-wide w3-center">CONTACTO</h2>
-        <p class="w3-opacity w3-center">
-            <i>Fan? Organizar un recital? Dejanos tu mensaje !!</i>
-        </p>
-        <div class="w3-row w3-padding-32">
-            <div class="w3-col m6 w3-large w3-margin-bottom">
-                <i class="fa fa-map-marker" style="width:30px"></i>
-                Buenos Aires, Argentina<br>
-                <i class="fa fa-phone" style="width:30px"></i>
-                Telefono: +54 11 151515<br>
-                <i class="fa fa-envelope" style="width:30px"></i>
-                Email: buenacosecha@gmail.com<br>
-            </div>
-            <div class="w3-col m6">
-                <div class="w3-row-padding" style="margin:0 -16px 8px -16px">
-                    <div class="w3-half">
-                        <input class="w3-input w3-border" type="text" placeholder="Nombre">
+                <div class="w3-row w3-padding-32">
+                    <div class="w3-third">
+                        <p>Gaston</p>
+                        <img src="/imagenes/perfil/gastonperfil.jpg" class="w3-round" alt="Random Name" style="width:60%">
                     </div>
-                    <div class="w3-half">
-                        <input class="w3-input w3-border" type="text" placeholder="Email">
+                    <div class="w3-third">
+                        <p>Melina</p>
+                        <img src="/imagenes/perfil/melinaperfil.jpg" class="w3-round" alt="Random Name" style="width:60%">
+                    </div>
+                    <div class="w3-third">
+                        <p>Facundo</p>
+                        <img src="/imagenes/perfil/facuperfil.jpg" class="w3-round" alt="Random Name" style="width:60%">
                     </div>
                 </div>
-                <input class="w3-input w3-border" type="text" placeholder="Comentario">
-                <button class="w3-btn w3-section w3-right">Enviar</button>
             </div>
+
+            <!-- The Tour Section -->
         </div>
     </div>
+</div>
 
-    <!-- End Page Content -->
+<!-- The Contact Section -->
+<div class="w3-container w3-content w3-padding-64" style="max-width:800px">
+    <h2 class="w3-wide w3-center">CONTACTO</h2>
+    <p class="w3-opacity w3-center">
+        <i>Fan? Organizar un recital? Dejanos tu mensaje !!</i>
+    </p>
+    <div class="w3-row w3-padding-32">
+        <div class="w3-col m6 w3-large w3-margin-bottom">
+            <i class="fa fa-map-marker" style="width:30px"></i>
+            Buenos Aires, Argentina<br>
+            <i class="fa fa-phone" style="width:30px"></i>
+            Telefono: +54 11 151515<br>
+            <i class="fa fa-envelope" style="width:30px"></i>
+            Email: buenacosecha@gmail.com<br>
+        </div>
+        <div class="w3-col m6">
+            <div class="w3-row-padding" style="margin:0 -16px 8px -16px">
+                <div class="w3-half">
+                    <input class="w3-input w3-border" type="text" placeholder="Nombre">
+                </div>
+                <div class="w3-half">
+                    <input class="w3-input w3-border" type="text" placeholder="Email">
+                </div>
+            </div>
+            <input class="w3-input w3-border" type="text" placeholder="Comentario">
+            <button class="w3-btn w3-section w3-right">Enviar</button>
+        </div>
+    </div>
+</div>
+
+<!-- End Page Content -->
 </div>
 
 <!-- Footer -->
 <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
-    <a href="https://www.facebook.com/buenacosechabanda/" class="w3-hover-text-indigo">
-        <i class="fa fa-facebook-official"></i>
-    </a>
-    <a href="#" class="w3-hover-text-red">
-        <i class="fa fa-pinterest-p"></i>
-    </a>
-    <a href="#" class="w3-hover-text-light-blue">
-        <i class="fa fa-twitter"></i>
-    </a>
-    <a href="#" class="w3-hover-text-grey">
-        <i class="fa fa-flickr"></i>
-    </a>
-    <a href="#" class="w3-hover-text-indigo">
-        <i class="fa fa-linkedin"></i>
-    </a>
-    <p class="w3-medium">Creado por Buena Cosecha - 2016
-        <a href="#" target="_blank">https://www.facebook.com/buenacosechabanda</a>
-    </p>
+<a href="https://www.facebook.com/buenacosechabanda/" class="w3-hover-text-indigo">
+    <i class="fa fa-facebook-official"></i>
+</a>
+<a href="#" class="w3-hover-text-red">
+    <i class="fa fa-pinterest-p"></i>
+</a>
+<a href="#" class="w3-hover-text-light-blue">
+    <i class="fa fa-twitter"></i>
+</a>
+<a href="#" class="w3-hover-text-grey">
+    <i class="fa fa-flickr"></i>
+</a>
+<a href="#" class="w3-hover-text-indigo">
+    <i class="fa fa-linkedin"></i>
+</a>
+<p class="w3-medium">Creado por Buena Cosecha - 2016
+    <a href="#" target="_blank">https://www.facebook.com/buenacosechabanda</a>
+</p>
 </footer>
 
 <script src="/js/slide.js"></script>
