--- a/views/layout.erb
+++ b/views/layout.erb
@@ -47,7 +47,7 @@
 
             </li>
             <li class="w3-hide-small">
-                <a class=" w3-padding-large" href="mailto:buenacosecha@gmail.com?subject=contacto">
+                <a class=" w3-padding-large" href="mailto:info@buenacosecha.com.ar?subject=contacto">
                     <i class="material-icons">mail</i>
                     Contacto
                 </a>
