--- a/views/index.erb
+++ b/views/index.erb
@@ -27,12 +27,10 @@
 
             <!-- Automatic Slideshow Images -->
             <div class="mySlides w3-display-container ">
-                <img src="/imagenes/galeria/fechas/flyersalon.jpg" class="w3-animate-bottom" align="middle" width="1400px" height="900px">
+                <img src="/imagenes/logos/logorojo.jpg" class="w3-animate-bottom" align="middle" style="width:100%">
                 <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
-                    <h3>Buena Cosecha!</h3>
-                    <p>
-                        <b>Es lo que somos</b>
-                    </p>
+                    <h3>Ska, Reggae!</h3>
+
                 </div>
             </div>
             <!--  <div class="mySlides w3-display-container ">
