--- a/views/layout.erb
+++ b/views/layout.erb
@@ -74,13 +74,13 @@
     <div id="navDemo" class="w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
         <ul class="w3-navbar w3-center-align w3-black">
             <li>
-                <a class="w3-padding-large" href="audios">Música</a>
+                <a class="w3-padding-large" href="multimedia">Música</a>
             </li>
             <li>
-                <a class="w3-padding-large" href="pasados">Fechas</a>
+                <a class="w3-padding-large" href="shows">Fechas</a>
             </li>
             <li>
-                <a class="w3-padding-large" href="mailto:buenacosecha@gmail.com?subject=contacto">Contacto</a>
+                <a class="w3-padding-large" href="mailto:info@buenacosecha.com.ar?subject=contacto">Contacto</a>
             </li>
             <li>
                 <a class="w3-padding-large" href="entradas">Mas</a>
