--- a/views/index.erb
+++ b/views/index.erb
@@ -18,6 +18,11 @@
             }
 
         </style>
+        <style type="text/css">
+            .quitar {
+                text-decoration: none;
+            }
+        </style>
     </head>
 
     <body>
@@ -125,47 +130,47 @@
                 </p>
                 <div class="w3-row w3-padding-32">
                     <div class="w3-third">
-                        <p>Beto</p>
-                        <img src="/imagenes/perfil/betoperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
+                        <a href="https://www.facebook.com/reanaquin?fref=ts" class="quitar" target="_blank"><p>Beto</p>
+                        <img src="/imagenes/perfil/betoperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%"></a>
                     </div>
                     <div class="w3-third">
-                        <p>Uriel</p>
-                        <img src="/imagenes/perfil/uriperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
+                        <a href="https://www.facebook.com/uri182?fref=ts" class="quitar" target="_blank"><p>Uri</p>
+                        <img src="/imagenes/perfil/uriperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%"></a>
                     </div>
                     <div class="w3-third">
-                        <p>Gaston</p>
-                        <img src="/imagenes/perfil/gastonperfil.jpg" class="w3-round" alt="Random Name" style="width:60%">
-                    </div>
-                </div>
-
-                <div class="w3-row w3-padding-32">
-                    <div class="w3-third">
-                        <p>Danilo</p>
-                        <img src="/imagenes/perfil/daniloperfil.jpg" class="w3-round" alt="Random Name" style="width:60%">
-                    </div>
-
-                    <div class="w3-third">
-                        <p>Romina</p>
-                        <img src="/imagenes/perfil/romiperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
-                    </div>
-                    <div class="w3-third">
-                        <p>Daniel</p>
-                        <img src="/imagenes/perfil/walterperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
+                        <a href="https://www.facebook.com/gastonroca1?fref=ts" class="quitar" target="_blank"><p>Gaston</p>
+                        <img src="/imagenes/perfil/gastonperfil.jpg" class="w3-round" alt="Random Name" style="width:60%"></a>
                     </div>
                 </div>
 
                 <div class="w3-row w3-padding-32">
                     <div class="w3-third">
-                        <p>Hernán</p>
-                        <img src="/imagenes/perfil/hernanperfil.jpg" class="w3-round" alt="Random Name" style="width:60%">
+                        <a href="https://www.facebook.com/Danilo.Bascones.1917?fref=ts" class="quitar" target="_blank"><p>Vasco</p>
+                        <img src="/imagenes/perfil/daniloperfil.jpg" class="w3-round" alt="Random Name" style="width:60%"></a>
+                    </div>
+
+                    <div class="w3-third">
+                        <a href="https://www.facebook.com/romina.vera.33?fref=ts" class="quitar" target="_blank"><p>Romi</p>
+                        <img src="/imagenes/perfil/romiperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%"></a>
                     </div>
                     <div class="w3-third">
-                        <p>Melina</p>
-                        <img src="/imagenes/perfil/melinaperfil.jpg" class="w3-round" alt="Random Name" style="width:60%">
+                        <a href="https://www.facebook.com/profile.php?id=100011909254275&fref=ts" class="quitar" target="_blank"><p>Dani</p>
+                        <img src="/imagenes/perfil/walterperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%"></a>
+                    </div>
+                </div>
+
+                <div class="w3-row w3-padding-32">
+                    <div class="w3-third">
+                        <a href="https://www.facebook.com/iconoclasta" class="quitar" target="_blank"><p>Herni</p>
+                        <img src="/imagenes/perfil/hernanperfil.jpg" class="w3-round" alt="Random Name" style="width:60%"></a>
                     </div>
                     <div class="w3-third">
-                        <p>Facundo</p>
-                        <img src="/imagenes/perfil/facuperfil.jpg" class="w3-round" alt="Random Name" style="width:60%">
+                        <a href="https://www.facebook.com/melina.german?fref=ts" class="quitar" target="_blank"><p>Meli</p>
+                        <img src="/imagenes/perfil/melinaperfil.jpg" class="w3-round" alt="Random Name" style="width:60%"></a>
+                    </div>
+                    <div class="w3-third">
+                        <a href="https://www.facebook.com/facubks?fref=ts" class="quitar" target="_blank"><p>Facu</p>
+                        <img src="/imagenes/perfil/facuperfil.jpg" class="w3-round" alt="Random Name" style="width:60%"></a>
                     </div>
                 </div>
             </div>
