links redes sociales

--- a/views/index.erb
+++ b/views/index.erb
@@ -22,6 +22,7 @@
             .quitar {
                 text-decoration: none;
             }
+
         </style>
     </head>
 
@@ -130,47 +131,56 @@
                 </p>
                 <div class="w3-row w3-padding-32">
                     <div class="w3-third">
-                        <a href="https://www.facebook.com/reanaquin?fref=ts" class="quitar" target="_blank"><p>Beto</p>
-                        <img src="/imagenes/perfil/betoperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%"></a>
+                        <a href="https://www.facebook.com/reanaquin?fref=ts" class="quitar" target="_blank">
+                            <p>Beto</p>
+                            <img src="/imagenes/perfil/betoperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%"></a>
                     </div>
                     <div class="w3-third">
-                        <a href="https://www.facebook.com/uri182?fref=ts" class="quitar" target="_blank"><p>Uri</p>
-                        <img src="/imagenes/perfil/uriperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%"></a>
+                        <a href="https://www.facebook.com/uri182?fref=ts" class="quitar" target="_blank">
+                            <p>Uri</p>
+                            <img src="/imagenes/perfil/uriperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%"></a>
                     </div>
                     <div class="w3-third">
-                        <a href="https://www.facebook.com/gastonroca1?fref=ts" class="quitar" target="_blank"><p>Gaston</p>
-                        <img src="/imagenes/perfil/gastonperfil.jpg" class="w3-round" alt="Random Name" style="width:60%"></a>
-                    </div>
-                </div>
-
-                <div class="w3-row w3-padding-32">
-                    <div class="w3-third">
-                        <a href="https://www.facebook.com/Danilo.Bascones.1917?fref=ts" class="quitar" target="_blank"><p>Vasco</p>
-                        <img src="/imagenes/perfil/daniloperfil.jpg" class="w3-round" alt="Random Name" style="width:60%"></a>
-                    </div>
-
-                    <div class="w3-third">
-                        <a href="https://www.facebook.com/romina.vera.33?fref=ts" class="quitar" target="_blank"><p>Romi</p>
-                        <img src="/imagenes/perfil/romiperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%"></a>
-                    </div>
-                    <div class="w3-third">
-                        <a href="https://www.facebook.com/profile.php?id=100011909254275&fref=ts" class="quitar" target="_blank"><p>Dani</p>
-                        <img src="/imagenes/perfil/walterperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%"></a>
+                        <a href="https://www.facebook.com/gastonroca1?fref=ts" class="quitar" target="_blank">
+                            <p>Gaston</p>
+                            <img src="/imagenes/perfil/gastonperfil.jpg" class="w3-round" alt="Random Name" style="width:60%"></a>
                     </div>
                 </div>
 
                 <div class="w3-row w3-padding-32">
                     <div class="w3-third">
-                        <a href="https://www.facebook.com/iconoclasta" class="quitar" target="_blank"><p>Herni</p>
-                        <img src="/imagenes/perfil/hernanperfil.jpg" class="w3-round" alt="Random Name" style="width:60%"></a>
+                        <a href="https://www.facebook.com/Danilo.Bascones.1917?fref=ts" class="quitar" target="_blank">
+                            <p>Vasco</p>
+                            <img src="/imagenes/perfil/daniloperfil.jpg" class="w3-round" alt="Random Name" style="width:60%"></a>
+                    </div>
+
+                    <div class="w3-third">
+                        <a href="https://www.facebook.com/romina.vera.33?fref=ts" class="quitar" target="_blank">
+                            <p>Romi</p>
+                            <img src="/imagenes/perfil/romiperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%"></a>
                     </div>
                     <div class="w3-third">
-                        <a href="https://www.facebook.com/melina.german?fref=ts" class="quitar" target="_blank"><p>Meli</p>
-                        <img src="/imagenes/perfil/melinaperfil.jpg" class="w3-round" alt="Random Name" style="width:60%"></a>
+                        <a href="https://www.facebook.com/profile.php?id=100011909254275&fref=ts" class="quitar" target="_blank">
+                            <p>Dani</p>
+                            <img src="/imagenes/perfil/walterperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%"></a>
+                    </div>
+                </div>
+
+                <div class="w3-row w3-padding-32">
+                    <div class="w3-third">
+                        <a href="https://www.facebook.com/iconoclasta" class="quitar" target="_blank">
+                            <p>Herni</p>
+                            <img src="/imagenes/perfil/hernanperfil.jpg" class="w3-round" alt="Random Name" style="width:60%"></a>
                     </div>
                     <div class="w3-third">
-                        <a href="https://www.facebook.com/facubks?fref=ts" class="quitar" target="_blank"><p>Facu</p>
-                        <img src="/imagenes/perfil/facuperfil.jpg" class="w3-round" alt="Random Name" style="width:60%"></a>
+                        <a href="https://www.facebook.com/melina.german?fref=ts" class="quitar" target="_blank">
+                            <p>Meli</p>
+                            <img src="/imagenes/perfil/melinaperfil.jpg" class="w3-round" alt="Random Name" style="width:60%"></a>
+                    </div>
+                    <div class="w3-third">
+                        <a href="https://www.facebook.com/facubks?fref=ts" class="quitar" target="_blank">
+                            <p>Facu</p>
+                            <img src="/imagenes/perfil/facuperfil.jpg" class="w3-round" alt="Random Name" style="width:60%"></a>
                     </div>
                 </div>
             </div>
@@ -218,18 +228,14 @@
 <a href="https://www.facebook.com/buenacosechabanda/" class="w3-hover-text-indigo">
     <i class="fa fa-facebook-official"></i>
 </a>
-<a href="#" class="w3-hover-text-red">
-    <i class="fa fa-pinterest-p"></i>
+<a href="https://www.instagram.com/buenacosechaska" class="w3-hover-text-red">
+    <i class="icon-instagram"></i>
+    icon-instagram
 </a>
-<a href="#" class="w3-hover-text-light-blue">
+<a href="https://www.twitter.com/buenacosechaska" class="w3-hover-text-light-blue">
     <i class="fa fa-twitter"></i>
 </a>
-<a href="#" class="w3-hover-text-grey">
-    <i class="fa fa-flickr"></i>
-</a>
-<a href="#" class="w3-hover-text-indigo">
-    <i class="fa fa-linkedin"></i>
-</a>
+
 <p class="w3-medium">Creado por Buena Cosecha - 2016
     <a href="#" target="_blank">https://www.facebook.com/buenacosechabanda</a>
 </p>
