--- a/views/index.erb
+++ b/views/index.erb
@@ -230,10 +230,12 @@
 </a>
 <a href="https://www.instagram.com/buenacosechaska" class="w3-hover-text-red">
     <i class="icon-instagram"></i>
-    icon-instagram
 </a>
 <a href="https://www.twitter.com/buenacosechaska" class="w3-hover-text-light-blue">
     <i class="fa fa-twitter"></i>
+</a>
+<a href="mailto:info@buenacosecha.com.ar?subject=contacto" class="w3-hover-text-light-blue">
+  <i class="icon-envelope"></i> icon-envelope
 </a>
 
 <p class="w3-medium">Creado por Buena Cosecha - 2016
