--- a/views/index.erb
+++ b/views/index.erb
@@ -235,7 +235,7 @@
     <i class="fa fa-twitter"></i>
 </a>
 <a href="mailto:info@buenacosecha.com.ar?subject=contacto" class="w3-hover-text-light-blue">
-  <i class="icon-envelope"></i> icon-envelope
+  <i class="icon-envelope"></i> 
 </a>
 
 <p class="w3-medium">Creado por Buena Cosecha - 2016
