--- a/views/index.erb
+++ b/views/index.erb
@@ -8,6 +8,8 @@
         <link href="<%= url('/estilos/styles.css') %>" rel="stylesheet" type="text/css"/>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
         <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
+        <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
+        <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 
         <style>
             body {
@@ -229,13 +231,13 @@
     <i class="fa fa-facebook-official"></i>
 </a>
 <a href="https://www.instagram.com/buenacosechaska" class="w3-hover-text-red">
-  <i class="icon-instagram"></i> icon-instagram
+    <i class="icon-instagram"></i>
 </a>
 <a href="https://www.twitter.com/buenacosechaska" class="w3-hover-text-light-blue">
     <i class="fa fa-twitter"></i>
 </a>
 <a href="mailto:info@buenacosecha.com.ar?subject=contacto" class="w3-hover-text-light-blue">
-  <i class="icon-envelope"></i> icon-envelope
+    <i class="icon-envelope"></i>
 </a>
 
 <p class="w3-medium">Creado por Buena Cosecha - 2016
