redes sociales en el menu

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -67,6 +67,23 @@
                     <i class="fa fa-search"></i>
                 </a>
             </li>
+            <li class="w3-hide-small w3-right">
+            <a href="https://www.facebook.com/buenacosechabanda/" class="w3-hover-text-indigo">
+                <i class="fa fa-facebook-official"></i>
+            </a>
+            <li class="w3-hide-small w3-right">
+            <a href="https://www.instagram.com/buenacosechaska" class="w3-hover-text-red">
+                <i class="icon-instagram"></i>
+            </a>
+            <li class="w3-hide-small w3-right">
+            <a href="https://www.twitter.com/buenacosechaska" class="w3-hover-text-light-blue">
+                <i class="fa fa-twitter"></i>
+            </a>
+            <li class="w3-hide-small w3-right">
+            <a href="mailto:info@buenacosecha.com.ar?subject=contacto" class="w3-hover-text-light-blue">
+                <i class="icon-envelope"></i>
+            </a>
+
         </ul>
     </div>
 
