--- a/views/index.erb
+++ b/views/index.erb
@@ -226,16 +226,16 @@
 
 <!-- Footer -->
 <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
-<a href="https://www.facebook.com/buenacosechabanda/" class="w3-hover-text-indigo">
+<a href="https://www.facebook.com/buenacosechabanda/" class="w3-hover-text-indigo" target="_blank">
     <i class="fa fa-facebook-official"></i>
 </a>
-<a href="https://www.instagram.com/buenacosechaska" class="w3-hover-text-red">
+<a href="https://www.instagram.com/buenacosechaska" class="w3-hover-text-red" target="_blank">
     <i class="icon-instagram"></i>
 </a>
-<a href="https://www.twitter.com/buenacosechaska" class="w3-hover-text-light-blue">
+<a href="https://www.twitter.com/buenacosechaska" class="w3-hover-text-light-blue" target="_blank">
     <i class="fa fa-twitter"></i>
 </a>
-<a href="mailto:info@buenacosecha.com.ar?subject=contacto" class="w3-hover-text-light-blue">
+<a href="mailto:info@buenacosecha.com.ar?subject=contacto" class="w3-hover-text-light-blue" target="_blank">
     <i class="icon-envelope"></i>
 </a>
 
