--- a/views/layout.erb
+++ b/views/layout.erb
@@ -46,12 +46,6 @@
                 </div>
 
             </li>
-            <li class="w3-hide-small">
-                <a class=" w3-padding-large" href="mailto:info@buenacosecha.com.ar?subject=contacto">
-                    <i class="material-icons">mail</i>
-                    Contacto
-                </a>
-            </li>
             <li class="w3-hide-small w3-dropdown-hover">
                 <a href="mas" class="w3-hover-none w3-padding-large" title="Mas">
                     <i class="material-icons">add_shopping_cart</i>
@@ -68,21 +62,21 @@
                 </a>
             </li>
             <li class="w3-hide-small w3-right">
-            <a href="https://www.facebook.com/buenacosechabanda/" class="w3-hover-text-indigo">
-                <i class="fa fa-facebook-official"></i>
-            </a>
+                <a href="https://www.facebook.com/buenacosechabanda/" class="w3-hover-text-indigo" target="_blank">
+                    <i class="fa fa-facebook-official"></i>
+                </a>
             <li class="w3-hide-small w3-right">
-            <a href="https://www.instagram.com/buenacosechaska" class="w3-hover-text-red">
-                <i class="icon-instagram"></i>
-            </a>
+                <a href="https://www.instagram.com/buenacosechaska" class="w3-hover-text-red" target="_blank">
+                    <i class="icon-instagram"></i>
+                </a>
             <li class="w3-hide-small w3-right">
-            <a href="https://www.twitter.com/buenacosechaska" class="w3-hover-text-light-blue">
-                <i class="fa fa-twitter"></i>
-            </a>
+                <a href="https://www.twitter.com/buenacosechaska" class="w3-hover-text-light-blue" target="_blank">
+                    <i class="fa fa-twitter"></i>
+                </a>
             <li class="w3-hide-small w3-right">
-            <a href="mailto:info@buenacosecha.com.ar?subject=contacto" class="w3-hover-text-light-blue">
-                <i class="icon-envelope"></i>
-            </a>
+                <a href="mailto:info@buenacosecha.com.ar?subject=contacto" class="w3-hover-text-light-blue" target="_blank">
+                    <i class="icon-envelope"></i>
+                </a>
 
         </ul>
     </div>
