--- a/views/layout.erb
+++ b/views/layout.erb
@@ -62,24 +62,24 @@
                 </a>
             </li>
             <li class="w3-hide-small w3-right">
-                <a href="mailto:info@buenacosecha.com.ar?subject=contacto" class="w3-hover-text-light-blue" target="_blank">
+                <a href="mailto:info@buenacosecha.com.ar?subject=contacto" class="w3-padding-large w3-hover-text-light-blue" target="_blank">
                     <i class="icon-envelope"></i>
                 </a>
             </li>
 
             <li class="w3-hide-small w3-right">
-                <a href="https://www.instagram.com/buenacosechaska" class="w3-hover-text-red" target="_blank">
+                <a href="https://www.instagram.com/buenacosechaska" class="w3-padding-large w3-hover-text-red" target="_blank">
                     <i class="icon-instagram"></i>
                 </a>
             </li>
             <li class="w3-hide-small w3-right">
-                <a href="https://www.twitter.com/buenacosechaska" class="w3-hover-text-light-blue" target="_blank">
+                <a href="https://www.twitter.com/buenacosechaska" class="w3-padding-large w3-hover-text-light-blue" target="_blank">
                     <i class="fa fa-twitter"></i>
                 </a>
             </li>
 
             <li class="w3-hide-small w3-right">
-                <a href="https://www.facebook.com/buenacosechabanda/" class="w3-hover-text-indigo" target="_blank">
+                <a href="https://www.facebook.com/buenacosechabanda/" class="w3-padding-large w3-hover-text-indigo" target="_blank">
                     <i class="fa fa-facebook-official"></i>
                 </a>
             </li>
