--- a/views/salon.erb
+++ b/views/salon.erb
@@ -1,14 +1,86 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Buena Cosecha, Ska Reggae | En el Salón Pueyrredon</title>
-  </head>
-  <br>
-  <br>
-  <br>
+    <head>
+        <meta charset="utf-8">
+        <title>Buena Cosecha, Ska Reggae | En el Salón Pueyrredon</title>
+    </head>
+    <br>
+    <br>
+    <br>
 
-  <body>
+    <body>
+        <div class="w3-row-padding w3-margin-top">
 
-  </body>
+            <div class="w3-quarter w3-display-container">
+                <div class="w3-card-2">
+                    <img src="/imagenes/galeria/fechas/salon3-9/banda1.jpg" class="w3-border w3-padding" style="width:100%">
+                    <div class="w3-container">
+                        <h5>La banda!</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="w3-quarter w3-display-container">
+                <div class="w3-card-2">
+                    <img src="/imagenes/galeria/fechas/salon3-9/banda2.jpg" class="w3-border w3-padding" style="width:100%">
+                    <div class="w3-container">
+                        <h5>La banda loca!</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="w3-quarter w3-display-container">
+                <div class="w3-card-2">
+                    <img src="/imagenes/galeria/fechas/salon3-9/banda3.jpg" class="w3-border w3-padding" style="width:100%">
+                    <div class="w3-container">
+                        <h5>Beto, Romi y Dani</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="w3-quarter w3-display-container">
+                <div class="w3-card-2">
+                    <img src="/imagenes/galeria/fechas/salon3-9/banda4.jpg" class="w3-border w3-padding" style="width:100%">
+                    <div class="w3-container">
+                        <h5>Dani, Danilo y Hernan!</h5>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="w3-row-padding w3-margin-top">
+
+            <div class="w3-quarter w3-display-container">
+                <div class="w3-card-2">
+                    <img src="/imagenes/galeria/fechas/salon3-9/banda5.jpg" class="w3-border w3-padding" style="width:100%">
+                    <div class="w3-container">
+                        <h5>Beto, Walter y Danilo!!</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="w3-quarter w3-display-container">
+                <div class="w3-card-2">
+                    <img src="/imagenes/galeria/fechas/salon3-9/banda6.jpg" class="w3-border w3-padding" style="width:100%">
+                    <div class="w3-container">
+                        <h5>La banda!</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="w3-quarter w3-display-container">
+                <div class="w3-card-2">
+                    <img src="/imagenes/galeria/fechas/salon3-9/banda7.jpg" class="w3-border w3-padding" style="width:100%">
+                    <div class="w3-container">
+                        <h5>La banda!!</h5>
+                    </div>
+                </div>
+            </div>
+
+            <div class="w3-quarter w3-display-container">
+                <div class="w3-card-2">
+                    <img src="/imagenes/galeria/fechas/salon3-9/banda8.jpg" class="w3-border w3-padding" style="width:100%">
+                    <div class="w3-container">
+                        <h5>Buena Cosecha!!</h5>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </body>
 </html>
