--- a/views/locabohemia.erb
+++ b/views/locabohemia.erb
@@ -1,84 +1,84 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Buena Cosecha, Ska Reggae | En Loca Bohemia</title>
-  </head>
-  <body>
-    <br>
-    <br>
-    <br>
-    <div class="w3-row-padding w3-margin-top">
+    <head>
+        <meta charset="utf-8">
+        <title>Buena Cosecha, Ska Reggae | En Loca Bohemia</title>
+    </head>
+    <body>
+        <br>
+        <br>
+        <br>
+        <div class="w3-row-padding w3-margin-top">
 
-        <div class="w3-quarter w3-display-container">
-            <div class="w3-card-2">
-                <img src="/imagenes/galeria/band1.jpg" class="w3-border w3-padding" style="width:100%">
-                <div class="w3-container">
-                    <h5>El Beto!</h5>
+            <div class="w3-quarter w3-display-container">
+                <div class="w3-card-2">
+                    <img src="/imagenes/galeria/fechas/loca20-8/band1.jpg" class="w3-border w3-padding" style="width:100%">
+                    <div class="w3-container">
+                        <h5>El Beto!</h5>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="w3-quarter w3-display-container">
-            <div class="w3-card-2">
-                <img src="/imagenes/galeria/bandd.jpg" class="w3-border w3-padding" style="width:100%">
-                <div class="w3-container">
-                    <h5>La banda loca!</h5>
+            <div class="w3-quarter w3-display-container">
+                <div class="w3-card-2">
+                    <img src="/imagenes/galeria/fechas/loca20-8/bandd.jpg" class="w3-border w3-padding" style="width:100%">
+                    <div class="w3-container">
+                        <h5>La banda loca!</h5>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="w3-quarter w3-display-container">
-            <div class="w3-card-2">
-                <img src="/imagenes/galeria/band7.jpg" class="w3-border w3-padding" style="width:100%">
-                <div class="w3-container">
-                    <h5>El vasquito!</h5>
+            <div class="w3-quarter w3-display-container">
+                <div class="w3-card-2">
+                    <img src="/imagenes/galeria/fechas/loca20-8/band7.jpg" class="w3-border w3-padding" style="width:100%">
+                    <div class="w3-container">
+                        <h5>El vasquito!</h5>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="w3-quarter w3-display-container">
-            <div class="w3-card-2">
-                <img src="/imagenes/galeria/band2.jpg" class="w3-border w3-padding" style="width:100%">
-                <div class="w3-container">
-                    <h5>Pedales!</h5>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="w3-row-padding w3-margin-top">
-
-        <div class="w3-quarter w3-display-container">
-            <div class="w3-card-2">
-                <img src="/imagenes/galeria/band3.jpg" class="w3-border w3-padding" style="width:100%">
-                <div class="w3-container">
-                    <h5>Dani!!</h5>
-                </div>
-            </div>
-        </div>
-        <div class="w3-quarter w3-display-container">
-            <div class="w3-card-2">
-                <img src="/imagenes/galeria/band4.jpg" class="w3-border w3-padding" style="width:100%">
-                <div class="w3-container">
-                    <h5>La banda!</h5>
-                </div>
-            </div>
-        </div>
-        <div class="w3-quarter w3-display-container">
-            <div class="w3-card-2">
-                <img src="/imagenes/galeria/band5.jpg" class="w3-border w3-padding" style="width:100%">
-                <div class="w3-container">
-                    <h5>Beto!</h5>
+            <div class="w3-quarter w3-display-container">
+                <div class="w3-card-2">
+                    <img src="/imagenes/galeria/fechas/loca20-8/band2.jpg" class="w3-border w3-padding" style="width:100%">
+                    <div class="w3-container">
+                        <h5>Pedales!</h5>
+                    </div>
                 </div>
             </div>
         </div>
 
-        <div class="w3-quarter w3-display-container">
-            <div class="w3-card-2">
-                <img src="/imagenes/galeria/band6.jpg" class="w3-border w3-padding" style="width:100%">
-                <div class="w3-container">
-                    <h5>Los temas!</h5>
+        <div class="w3-row-padding w3-margin-top">
+
+            <div class="w3-quarter w3-display-container">
+                <div class="w3-card-2">
+                    <img src="/imagenes/galeria/fechas/loca20-8/band3.jpg" class="w3-border w3-padding" style="width:100%">
+                    <div class="w3-container">
+                        <h5>Dani!!</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="w3-quarter w3-display-container">
+                <div class="w3-card-2">
+                    <img src="/imagenes/galeria/fechas/loca20-8/band4.jpg" class="w3-border w3-padding" style="width:100%">
+                    <div class="w3-container">
+                        <h5>La banda!</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="w3-quarter w3-display-container">
+                <div class="w3-card-2">
+                    <img src="/imagenes/galeria/fechas/loca20-8/band5.jpg" class="w3-border w3-padding" style="width:100%">
+                    <div class="w3-container">
+                        <h5>Beto!</h5>
+                    </div>
+                </div>
+            </div>
+
+            <div class="w3-quarter w3-display-container">
+                <div class="w3-card-2">
+                    <img src="/imagenes/galeria/fechas/loca20-8/band6.jpg" class="w3-border w3-padding" style="width:100%">
+                    <div class="w3-container">
+                        <h5>Los temas!</h5>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-  </body>
+    </body>
 </html>
