agregado las escalas en los heads de .erbs

--- a/views/entradas.erb
+++ b/views/entradas.erb
@@ -3,6 +3,7 @@
     <head>
         <script src="/js/entradas.js"></script>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Buena Cosecha, Ska Reggae | Comprar entradas</title>
     </head>
     <body>
@@ -20,7 +21,7 @@
                         <span class="w3-tag w3-red w3-margin-left">Finalizado</span>
                     </li>
                     <li class="w3-padding">Septiembre
-                        <span class="w3-tag w3-red w3-margin-left">Sabado 3 de Septiembre en el Salón Pueyrredon</span>
+                        <span class="w3-tag w3-red w3-margin-left">Finalizado</span>
                     </li>
                     <li class="w3-padding">Octubre
                         <span class="w3-badge w3-right w3-margin-right">Viernes 21 de Octubre en la Fiesta de la Flor</span>
