--- a/views/fiestadelaflor.erb
+++ b/views/fiestadelaflor.erb
@@ -2,12 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Buena Cosecha, Ska Reggae | En la Fiesta de la Flor</title>
   </head>
   <br>
   <br>
   <br>
-  
+
   <body>
 
   </body>
