--- a/views/salon.erb
+++ b/views/salon.erb
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Buena Cosecha, Ska Reggae | En el Salón Pueyrredon</title>
     </head>
     <br>
