--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <meta name="google-site-verification" content="tZ29lnY9K77zk3P76FMVACpqZm1Aeiha3lukoAFjE9M"/>
         <link href="<%= url('/estilos/styles.css') %>" rel="stylesheet" type="text/css"/>
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
