--- a/views/proximos.erb
+++ b/views/proximos.erb
@@ -16,6 +16,12 @@
     <br>
 
     <body>
+      <div class="w3-container w3-leftbar w3-border-deep-orange w3-orange">
+          <a href="https://www.facebook.com/buenacosechabanda/" target="_blank" class="quitar"></a>
+          <h3>
+              Sabado 24 de Septiembre en Parque Saavedra (Entre las calles Pinto, Av. García del Río, Vilela y Av. Melián, CABA), 13 hs, acceso libre y gratuito</h3>
+      </div>
+      <br>
         <div class="w3-container w3-leftbar w3-border-cyan w3-light-blue">
             <a href="https://www.facebook.com/buenacosechabanda/" target="_blank" class="quitar"></a>
             <h3>
