--- a/views/pasados.erb
+++ b/views/pasados.erb
@@ -17,16 +17,27 @@
         <br>
         <br>
         <br>
+        <div class="w3-container w3-leftbar w3-border-green w3-light-green">
+            <a href="salon" class="quitar"> <h3>Parque Saavedra | 24 de Septiembre del 2016</h3>
+            <p>Cuarto show de Buena Cosecha, primero al aire libre !!</p></a>
+        </div>
+
+        <div class="w3-container w3-leftbar w3-border-khaki w3-lime">
+            <a href="salon" class="quitar"> <h3>Salon Pueyrredon | 17 de Septiembre del 2016</h3>
+            <p>Tercer show de Buena Cosecha, compartiendo escenario con Riddim !!</p></a>
+        </div>
+
+        <div class="w3-container w3-leftbar w3-border-cyan w3-light-blue">
+            <a href="salon" class="quitar"> <h3>Salon Pueyrredon | 2 de Septiembre del 2016</h3>
+            <p>Segundo show de Buena Cosecha !!</p></a>
+        </div>
+
         <div class="w3-container w3-leftbar w3-border-deep-orange w3-orange">
             <a href="locabohemia" class="quitar"> <h3>Loca Bohemia | 20 de Agosto del 2016</h3>
             <p>Show debut de Buena Cosecha !!</p></a>
         </div>
         <br>
 
-        <div class="w3-container w3-leftbar w3-border-cyan w3-light-blue">
-            <a href="salon" class="quitar"> <h3>Salon Pueyrredon | 2 de Septiembre del 2016</h3>
-            <p>Segundo show de Buena Cosecha !!</p></a>
-        </div>
 
 
     </body>
