modificacion menu color

--- a/views/pasados.erb
+++ b/views/pasados.erb
@@ -18,12 +18,12 @@
         <br>
         <br>
         <div class="w3-container w3-leftbar w3-border-green w3-light-green">
-            <a href="salon" class="quitar"> <h3>Parque Saavedra | 24 de Septiembre del 2016</h3>
+            <a href="" class="quitar"> <h3>Parque Saavedra | 24 de Septiembre del 2016</h3>
             <p>Cuarto show de Buena Cosecha, primero al aire libre !!</p></a>
         </div>
 
         <div class="w3-container w3-leftbar w3-border-khaki w3-lime">
-            <a href="salon" class="quitar"> <h3>Salon Pueyrredon | 17 de Septiembre del 2016</h3>
+            <a href="" class="quitar"> <h3>Salon Pueyrredon | 17 de Septiembre del 2016</h3>
             <p>Tercer show de Buena Cosecha, compartiendo escenario con Riddim !!</p></a>
         </div>
 
