--- a/views/proximos.erb
+++ b/views/proximos.erb
@@ -19,7 +19,7 @@
       <div class="w3-container w3-leftbar w3-border-deep-orange w3-orange">
           <a href="https://www.facebook.com/buenacosechabanda/" target="_blank" class="quitar"></a>
           <h3>
-              Sabado 1 de Octubre (Av. Santa Fe 4560), 23 hs, $80 en puerta</h3>
+              Sabado 1 de Octubre en el Salon Pueyrredon (Av. Santa Fe 4560 CABA), 23 hs, $80 en puerta</h3>
       </div>
       <br>
         <div class="w3-container w3-leftbar w3-border-cyan w3-light-blue">
