--- a/views/index.erb
+++ b/views/index.erb
@@ -199,9 +199,9 @@
                             <i class="fa fa-map-marker" style="width:30px"></i>
                             Buenos Aires, Argentina<br>
                             <i class="fa fa-phone" style="width:30px"></i>
-                            Telefono: +54 11 151515<br>
+                            Telefono: +54 11 --------<br>
                             <i class="fa fa-envelope" style="width:30px"></i>
-                            Email: buenacosecha@gmail.com<br>
+                            Email: info@buenacosecha.com.ar<br>
                         </div>
                         <div class="w3-col m6">
                             <div class="w3-row-padding" style="margin:0 -16px 8px -16px">
