--- a/views/index.erb
+++ b/views/index.erb
@@ -34,24 +34,15 @@
         <div class="w3-content" style="max-width:1800px;margin-top:46px">
 
             <!-- Automatic Slideshow Images -->
-            <div class="mySlides w3-display-container ">
+            <!-- <div class="mySlides w3-display-container ">
                 <img src="/imagenes/logos/logorojo.jpg" class="w3-animate-bottom" align="middle" style="width:100%">
                 <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
                     <h3>Ska, Reggae!</h3>
 
                 </div>
-            </div>
-            <!--  <div class="mySlides w3-display-container ">
-                <img src="/imagenes/galeria/bandd.jpg" class="w3-animate-top" style="width:100%">
-                <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
-                    <h3>Buena Cosecha!</h3>
-                    <p>
-                        <b>Es lo que somos</b>
-                    </p>
-                </div>
-            </div>
-            <div class="mySlides w3-display-container">
-                <img src="/imagenes/galeria/band1.jpg" class="w3-animate-bottom" style="width:100%">
+            </div> -->
+            <div class="mySlides w3-display-container ">
+                <img src="/imagenes/galeria/fechas/slide/banda6.jpg" class="w3-animate-top" style="width:100%">
                 <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
                     <h3>Buena Cosecha!</h3>
                     <p>
@@ -60,7 +51,16 @@
                 </div>
             </div>
             <div class="mySlides w3-display-container">
-                <img src="/imagenes/galeria/band2.jpg" class="w3-animate-top" style="width:100%">
+                <img src="/imagenes/galeria/fechas/slide/band4.jpg" class="w3-animate-bottom" style="width:100%">
+                <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
+                    <h3>Buena Cosecha!</h3>
+                    <p>
+                        <b>en vivo!</b>
+                    </p>
+                </div>
+            </div>
+            <div class="mySlides w3-display-container">
+                <img src="/imagenes/galeria/fechas/slide/banda1.jpg" class="w3-animate-top" style="width:100%">
                 <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
                     <h3>Buena Cosecha!</h3>
                     <p>
@@ -69,7 +69,7 @@
                 </div>
             </div>
             <div class="mySlides w3-display-container">
-                <img src="/imagenes/galeria/band3.jpg" class="w3-animate-bottom" style="width:100%">
+                <img src="/imagenes/galeria/fechas/slide/banda2.jpg" class="w3-animate-bottom" style="width:100%">
                 <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
                     <h3>Buena Cosecha!!</h3>
                     <p>
@@ -78,7 +78,7 @@
                 </div>
             </div>
             <div class="mySlides w3-display-container">
-                <img src="/imagenes/galeria/band4.jpg" class="w3-animate-top" style="width:100%">
+                <img src="/imagenes/galeria/fechas/slide/banda3.jpg" class="w3-animate-top" style="width:100%">
                 <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
                     <h3>Buena Cosecha!</h3>
                     <p>
@@ -87,7 +87,7 @@
                 </div>
             </div>
             <div class="mySlides w3-display-container">
-                <img src="/imagenes/galeria/band5.jpg" class="w3-animate-bottom" style="width:100%">
+                <img src="/imagenes/galeria/fechas/slide/banda8.jpg" class="w3-animate-bottom" style="width:100%">
                 <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
                     <h3>Buena Cosecha!</h3>
                     <p>
@@ -96,7 +96,7 @@
                 </div>
             </div>
             <div class="mySlides w3-display-container">
-                <img src="/imagenes/galeria/band6.jpg" class="w3-animate-top" style="width:100%">
+                <img src="/imagenes/galeria/fechas/slide/banda20.jpg" class="w3-animate-top" style="width:100%">
                 <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
                     <h3>Buena Cosecha!!</h3>
                     <p>
@@ -105,7 +105,7 @@
                 </div>
             </div>
             <div class="mySlides w3-display-container">
-                <img src="/imagenes/galeria/band7.jpg" class="w3-animate-bottom" style="width:100%">
+                <img src="/imagenes/galeria/fechas/slide/banda30.jpg" class="w3-animate-bottom" style="width:100%">
                 <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
                     <h3>Buena Cosecha!!</h3>
                     <p>
@@ -114,14 +114,24 @@
                 </div>
             </div>
             <div class="mySlides w3-display-container">
-                <img src="/imagenes/galeria/band8.jpg" class="w3-animate-top" style="width:100%">
+                <img src="/imagenes/galeria/fechas/slide/banda60.jpg" class="w3-animate-top" style="width:100%">
                 <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
                     <h3>Buena Cosecha!!</h3>
                     <p>
                         <b>En vivo!</b>
                     </p>
                 </div>
-            </div> -->
+            </div>
+            <div class="mySlides w3-display-container ">
+                <img src="/imagenes/galeria/fechas/slide/bandd.jpg" class="w3-animate-top" style="width:100%">
+                <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
+                    <h3>Buena Cosecha!</h3>
+                    <p>
+                        <b>en vivo!</b>
+                    </p>
+                </div>
+            </div>
+
 
             <!-- The Band Section -->
             <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px">
