--- a/views/index.erb
+++ b/views/index.erb
@@ -41,7 +41,7 @@
 
                 </div>
             </div> -->
-            <div class="mySlides w3-display-container ">
+            <div class="mySlides w3-display-container w3-opacity w3-hover-opacity-off">
                 <img src="/imagenes/galeria/slide/banda6.jpg" class="w3-animate-top" style="width:100%">
                 <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
                     <h3>Buena Cosecha!</h3>
@@ -50,7 +50,7 @@
                     </p>
                 </div>
             </div>
-            <div class="mySlides w3-display-container">
+            <div class="mySlides w3-display-container w3-opacity w3-hover-opacity-off">
                 <img src="/imagenes/galeria/slide/band4.jpg" class="w3-animate-bottom" style="width:100%">
                 <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
                     <h3>Buena Cosecha!</h3>
@@ -59,7 +59,7 @@
                     </p>
                 </div>
             </div>
-            <div class="mySlides w3-display-container">
+            <div class="mySlides w3-display-container w3-opacity w3-hover-opacity-off">
                 <img src="/imagenes/galeria/slide/banda1.jpg" class="w3-animate-top" style="width:100%">
                 <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
                     <h3>Buena Cosecha!</h3>
@@ -68,7 +68,7 @@
                     </p>
                 </div>
             </div>
-            <div class="mySlides w3-display-container">
+            <div class="mySlides w3-display-container w3-opacity w3-hover-opacity-off">
                 <img src="/imagenes/galeria/slide/banda2.jpg" class="w3-animate-bottom" style="width:100%">
                 <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
                     <h3>Buena Cosecha!!</h3>
@@ -77,7 +77,7 @@
                     </p>
                 </div>
             </div>
-            <div class="mySlides w3-display-container">
+            <div class="mySlides w3-display-container w3-opacity w3-hover-opacity-off">
                 <img src="/imagenes/galeria/slide/banda3.jpg" class="w3-animate-top" style="width:100%">
                 <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
                     <h3>Buena Cosecha!</h3>
@@ -86,7 +86,7 @@
                     </p>
                 </div>
             </div>
-            <div class="mySlides w3-display-container">
+            <div class="mySlides w3-display-container w3-opacity w3-hover-opacity-off">
                 <img src="/imagenes/galeria/slide/banda8.jpg" class="w3-animate-bottom" style="width:100%">
                 <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
                     <h3>Buena Cosecha!</h3>
@@ -95,7 +95,7 @@
                     </p>
                 </div>
             </div>
-            <div class="mySlides w3-display-container">
+            <div class="mySlides w3-display-container w3-opacity w3-hover-opacity-off">
                 <img src="/imagenes/galeria/slide/banda20.jpg" class="w3-animate-top" style="width:100%">
                 <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
                     <h3>Buena Cosecha!!</h3>
@@ -104,7 +104,7 @@
                     </p>
                 </div>
             </div>
-            <div class="mySlides w3-display-container">
+            <div class="mySlides w3-display-container w3-opacity w3-hover-opacity-off">
                 <img src="/imagenes/galeria/slide/banda30.jpg" class="w3-animate-bottom" style="width:100%">
                 <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
                     <h3>Buena Cosecha!!</h3>
@@ -113,7 +113,7 @@
                     </p>
                 </div>
             </div>
-            <div class="mySlides w3-display-container">
+            <div class="mySlides w3-display-container w3-opacity w3-hover-opacity-off">
                 <img src="/imagenes/galeria/slide/banda60.jpg" class="w3-animate-top" style="width:100%">
                 <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
                     <h3>Buena Cosecha!!</h3>
@@ -122,7 +122,7 @@
                     </p>
                 </div>
             </div>
-            <div class="mySlides w3-display-container ">
+            <div class="mySlides w3-display-container w3-opacity w3-hover-opacity-off">
                 <img src="/imagenes/galeria/slide/bandd.jpg" class="w3-animate-top" style="width:100%">
                 <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
                     <h3>Buena Cosecha!</h3>
