--- a/views/layout.erb
+++ b/views/layout.erb
@@ -19,6 +19,7 @@
             </li>
             <li>
                 <a href="/" class="w3-hover-none w3-hover-text-grey w3-padding-large">
+                  <i class="material-icons">home</i>
                 </a>
 
             </li>
