--- a/views/secciones/pasados2.erb
+++ b/views/secciones/pasados2.erb
@@ -20,7 +20,7 @@
     <li class="w3-padding-16">
       <span onclick="this.parentElement.style.display='none'"
       class="w3-closebtn w3-padding w3-margin-right w3-medium">x</span>
-      <img src="img_avatar2.png" class="w3-left w3-circle w3-margin-right" style="width:60px">
+      <img src="/imagenes/galeria/slide/banda6.jpg" class="w3-left w3-circle w3-margin-right" style="width:60px">
       <span class="w3-xlarge">Parque Saavedra | CABA</span><br>
       <span>24 de Septiembre de 2016</span>
       <a href="pquesaavedra" class="quitar"></a>
