imagenes en la lista de eventos pasados

--- a/views/secciones/pasados2.erb
+++ b/views/secciones/pasados2.erb
@@ -19,7 +19,7 @@
         <br>
 
         <div class="w3-container">
-            <ul class="w3-ul w3-card-4">
+            <ul class="w3-ul w3-card-4 w3-hoverable w3-green">
                 <li class="w3-padding-16">
                     <span onclick="this.parentElement.style.display='none'" class="w3-closebtn w3-padding w3-margin-right w3-medium">x</span>
                     <a href="pquesaavedra" class="quitar"> <img src="/imagenes/galeria/fechas/pquesaavedra1-10/banda6.jpg" class="w3-left w3-circle w3-margin-right" style="width:60px">
