--- a/views/layout.erb
+++ b/views/layout.erb
@@ -44,7 +44,7 @@
                 </div>
 
             </li>
-            <li class="w3-hide-small w3-dropdown-hover">
+            <!-- <li class="w3-hide-small w3-dropdown-hover">
                 <a href="mas" class="w3-hover-none w3-padding-large" title="Mas">
                     Mas
                 </a>
@@ -52,7 +52,7 @@
                     <a href="merchandising">Merchandising</a>
                     <a href="entradas">Entradas</a>
                 </div>
-            </li>
+            </li> -->
             <li class="w3-hide-small w3-right">
                 <a href="javascript:void(0)" class="w3-padding-large w3-hover-red">
                     <i class="fa fa-search"></i>
@@ -95,9 +95,9 @@
             <li>
                 <a class="w3-padding-large" href="mailto:info@buenacosecha.com.ar?subject=contacto">Contacto</a>
             </li>
-            <li>
+           <!-- <li>
                 <a class="w3-padding-large" href="entradas">Mas</a>
-            </li>
+            </li> -->
         </ul>
     </div>
 
