agregado boton de mas fotos en facebook

--- a/views/fechas/pquesaavedra.erb
+++ b/views/fechas/pquesaavedra.erb
@@ -3,6 +3,21 @@
   <head>
     <meta charset="utf-8">
     <title> Cosecha, Ska Reggae | En el Parque Saavedra</title>
+    <style>
+        body {
+            font-family: "Lato", sans-serif;
+        }
+        .mySlides {
+            display: none;
+        }
+
+    </style>
+    <style type="text/css">
+        .quitar {
+            text-decoration: none;
+        }
+
+    </style>
   </head>
   <br>
   <br>
@@ -81,8 +96,8 @@
               </div>
           </div>
       </div>
-      <div class="w3-container">
-        <a href="https://www.facebook.com/buenacosechabanda/photos/?tab=album&album_id=1104897319594142"><h4>Mas fotos aca!</h4></a>
+      <div class="w3-container quitar">
+        <a target="_blank" href="https://www.facebook.com/buenacosechabanda/photos/?tab=album&album_id=1104897319594142"><h5>Mas fotos aca!</h5></a>
 
       </div>
 
