agregando boton de facebook a mas fotos

--- a/views/fechas/pquesaavedra.erb
+++ b/views/fechas/pquesaavedra.erb
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
     <title> Cosecha, Ska Reggae | En el Parque Saavedra</title>
     <style>
         body {
@@ -92,7 +93,7 @@
       </div>
       <div class="w3-container ">
         <a class="quitar" target="_blank" href="https://www.facebook.com/buenacosechabanda/photos/?tab=album&album_id=1104897319594142"><h5>Mas fotos aca!</h5>
-          <i class="icon-facebook-sign icon-3x"></i> 
+          <i class="icon-facebook-sign icon-3x"></i>
         </a>
 
       </div>
