agregado de links a fotos de facebook

--- a/views/fechas/whitevinyl.erb
+++ b/views/fechas/whitevinyl.erb
@@ -82,6 +82,18 @@
                 </div>
             </div>
         </div>
+        <div class="w3-container ">
+            <a class="quitar" target="_blank" href="https://www.facebook.com/buenacosechabanda/photos/?tab=album&album_id=1098518390232035">
+                <h5>Mas fotos aca!</h5>
+                <i class="icon-facebook-sign icon-3x"></i>
+            </a>
+        </div>
+        <div class="w3-container ">
+            <a class="quitar" target="_blank" href="https://www.facebook.com/buenacosechabanda/photos/?tab=album&album_id=1101500526600488">
+                <h5>Mas fotos aca!</h5>
+                <i class="icon-facebook-sign icon-3x"></i>
+            </a>
+        </div>
 
     </body>
 </html>
