quitando bugs de subrayados agregando estilos

--- a/views/fechas/whitevinyl.erb
+++ b/views/fechas/whitevinyl.erb
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="<%= url('/estilos/styles.css') %>" rel="stylesheet" type="text/css"/>
         <title>Buena Cosecha, Ska Reggae | En White Vinyl - Adrogue</title>
     </head>
     <br>
@@ -84,13 +85,13 @@
         </div>
         <div class="w3-container ">
             <a class="quitar" target="_blank" href="https://www.facebook.com/buenacosechabanda/photos/?tab=album&album_id=1098518390232035">
-                <h5>Mas fotos aca!</h5>
+                <h5>Mas fotos acá!</h5>
                 <i class="icon-facebook-sign icon-3x"></i>
             </a>
         </div>
         <div class="w3-container ">
             <a class="quitar" target="_blank" href="https://www.facebook.com/buenacosechabanda/photos/?tab=album&album_id=1101500526600488">
-                <h5>Mas fotos aca!</h5>
+                <h5>Y acá!</h5>
                 <i class="icon-facebook-sign icon-3x"></i>
             </a>
         </div>
