--- a/views/index.erb
+++ b/views/index.erb
@@ -4,7 +4,7 @@
     </title>
     <head>
         <meta name="google-site-verification" content="tZ29lnY9K77zk3P76FMVACpqZm1Aeiha3lukoAFjE9M"/>
-        <meta name="Buena Cosecha | Ska, Reggae" content="Buena Cosecha, Página oficial, ska, reggae, musica, banda, shows, recitales, fotos">
+        <meta name="Buena Cosecha | Ska, Reggae" content="Buena Cosecha, Página oficial, ska, reggae, musica, banda, shows, recitales, fotos, videos">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="<%= url('/estilos/styles.css') %>" rel="stylesheet" type="text/css"/>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
