--- a/views/fechas/locabohemia.erb
+++ b/views/fechas/locabohemia.erb
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="<%= url('/estilos/styles.css') %>" rel="stylesheet" type="text/css"/>
         <title>Buena Cosecha, Ska Reggae | En Loca Bohemia</title>
     </head>
     <body>
