--- a/views/secciones/entradas.erb
+++ b/views/secciones/entradas.erb
@@ -4,6 +4,7 @@
         <script src="/js/entradas.js"></script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="<%= url('/estilos/styles.css') %>" rel="stylesheet" type="text/css"/>
         <title>Buena Cosecha, Ska Reggae | Comprar entradas</title>
     </head>
     <body>
