modificando botonera de redes sociales

--- a/views/fechas/locabohemia.erb
+++ b/views/fechas/locabohemia.erb
@@ -84,13 +84,13 @@
         </div>
         <div class="w3-container ">
             <a class="quitar" target="_blank" href="https://www.facebook.com/1026536224096919/photos/?tab=album&album_id=1075265509223990">
-                <h5>Mas fotos aca!</h5>
+                <h5>Mas fotos acá!</h5>
                 <i class="icon-facebook-sign icon-3x"></i>
             </a>
         </div>
         <div class="w3-container ">
             <a class="quitar" target="_blank" href="https://www.facebook.com/buenacosechabanda/photos/?tab=album&album_id=1075485879201953">
-                <h5>Mas fotos aca!</h5>
+                <h5>Y acá!</h5>
                 <i class="icon-facebook-sign icon-3x"></i>
             </a>
         </div>
