--- a/public/estilos/styles.css
+++ b/public/estilos/styles.css
@@ -1602,6 +1602,45 @@ input[type=checkbox].w3-check:disabled+.w3-validate, input[type=radio].w3-radio:
     text-shadow: 1px 1px 0 #ddd
 }
 
+/* Quitar subrayado a los hipervinculos */
+
 .quitar {
     text-decoration: none;
+}
+
+/* Botonera de redes sociales */
+
+-webkit-transform: scale(1.1);
+-moz-transform: scale(1.1);
+-o-transform: scale(1.1);
+}
+.social {
+-webkit-transform: scale(0.8);
+/* Browser Variations: */
+
+-moz-transform: scale(0.8);
+-o-transform: scale(0.8);
+-webkit-transition-duration: 0.5s;
+-moz-transition-duration: 0.5s;
+-o-transition-duration: 0.5s;
+}
+
+/*
+Multicoloured Hover Variations
+*/
+
+#social-fb:hover {
+color: #3B5998;
+}
+#social-tw:hover {
+color: #4099FF;
+}
+#social-em:hover {
+color: #f39c12;
+}
+#social-yt:hover {
+color: #f39c12;
+}
+#social-in:hover {
+color: #f39c12;
 }
