--- a/views/fechas/pquesaavedra.erb
+++ b/views/fechas/pquesaavedra.erb
@@ -92,7 +92,7 @@
           </div>
       </div>
       <div class="w3-container ">
-        <a class="quitar" target="_blank" href="https://www.facebook.com/buenacosechabanda/photos/?tab=album&album_id=1104897319594142"><h5>Mas fotos aca!</h5>
+        <a class="quitar" target="_blank" href="https://www.facebook.com/buenacosechabanda/photos/?tab=album&album_id=1104897319594142"><h5>Mas fotos acá!</h5>
           <i class="icon-facebook-sign icon-3x"></i>
         </a>
 
