--- a/views/layout.erb
+++ b/views/layout.erb
@@ -61,26 +61,19 @@
                 </a>
             </li>
             <li class="w3-hide-small w3-right">
-                <a href="mailto:info@buenacosecha.com.ar?subject=contacto" class="w3-padding-large w3-hover-text-light-blue" target="_blank">
-                    <i class="icon-envelope"></i>
-                </a>
-            </li>
-
-            <li class="w3-hide-small w3-right">
-                <a href="https://www.instagram.com/buenacosechaska" class="w3-padding-large w3-hover-text-red" target="_blank">
-                    <i class="icon-instagram"></i>
-                </a>
+                <a href="mailto:info@buenacosecha.com.ar?subject=contacto" target="_blank"><i id="social-em" class="fa fa-envelope-square fa-3x social"></i></a>
             </li>
             <li class="w3-hide-small w3-right">
-                <a href="https://www.twitter.com/buenacosechaska" class="w3-padding-large w3-hover-text-light-blue" target="_blank">
-                    <i class="fa fa-twitter"></i>
-                </a>
+                <a href="https://www.instagram.com/buenacosechaska" target="_blank"><i id="social-in" class="fa fa-instagram fa-3x social"></i></a>
             </li>
-
             <li class="w3-hide-small w3-right">
-                <a href="https://www.facebook.com/buenacosechabanda/" class="w3-padding-large w3-hover-text-indigo" target="_blank">
-                    <i class="fa fa-facebook-official"></i>
-                </a>
+                <a href="https://www.youtube.com/buenacosecha" target="_blank"><i id="social-yt" class="fa fa-youtube-play fa-3x social"></i></a>
+            </li>
+            <li class="w3-hide-small w3-right">
+                <a href="https://www.twitter.com/buenacosechaska" target="_blank"><i  id="social-tw" class="fa fa-twitter-square fa-3x social"></i></a>
+            </li>
+            <li class="w3-hide-small w3-right">
+                <a href="https://www.facebook.com/buenacosechabanda/" target="_blank"><i  id="social-fb" class="fa fa-facebook-square fa-3x social"></i></a>
             </li>
         </ul>
     </div>
