modificando botonera de redes sociales

--- a/public/estilos/styles.css
+++ b/public/estilos/styles.css
@@ -1609,7 +1609,7 @@ input[type=checkbox].w3-check:disabled+.w3-validate, input[type=radio].w3-radio:
 }
 
 /* Botonera de redes sociales */
-
+.social:hover {
 -webkit-transform: scale(1.1);
 -moz-transform: scale(1.1);
 -o-transform: scale(1.1);
