modificando botonera de redes sociales

--- a/public/estilos/styles.css
+++ b/public/estilos/styles.css
@@ -1639,11 +1639,11 @@ color: #4099FF;
 color: #f39c12;
 }
 #social-yt:hover {
-color: #f39c12;
+color: #b31217;
 }
 #social-in:hover {
-color: #f39c12;
+color: #cd486b;
 }
 #social-se:hover {
-color: #f39c12;
+color: #e95950;
 }
