modificando botonera de redes sociales

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -21,7 +21,7 @@
             </li>
             <li>
                 <a href="/" class="w3-hover-none w3-hover-text-grey w3-padding-large">
-                  <i class="fa fa-home fa-3x" aria-hidden="true"></i>
+                  <i id="social-ho" class="fa fa-home fa-3x social"> </i>
                 </a>
 
             </li>
