modificando botonera de redes sociales en el footer

--- a/views/index.erb
+++ b/views/index.erb
@@ -188,32 +188,15 @@
                             <img src="/imagenes/perfil/facuperfil.jpg" class="w3-round" alt="Random Name" style="width:60%"></a>
                     </div>
                 </div>
-
-                <!-- The Tour Section -->
-
-                <!-- The Contact Section -->
-                <div class="w3-container w3-content w3-padding-64 w3-center" style="max-width:800px">
-                    <h2 class="w3-wide w3-center">CONTACTO</h2>
-                    <div class="w3-row w3-padding-32">
-                        <div class="w3-col m6 w3-large w3-margin-bottom">
-                            <i class="fa fa-envelope" style="width:30px"></i>
-                            Email: info@buenacosecha.com.ar<br>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- End Page Content -->
             </div>
 
             <!-- Footer -->
-            <footer>
-            </footer>
+            <footer></footer>
 
             <script src="/js/slide.js"></script>
             <script src="/js/menu.js"></script>
             <script src="/js/clicks.js"></script>
             <script src="/js/jquery.js"></script>
-
 
         </body>
     </html>
