--- a/views/layout.erb
+++ b/views/layout.erb
@@ -121,16 +121,14 @@
                 <%= yield %>
             </div>
         </body>
-        <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge w3-center">
-          <div class="w3-container w3-content w3-padding-16" style="max-width:800px">
-              <h2 class="w3-wide w3-center">CONTACTO</h2>
-              <div class="w3-row w3-padding-32">
-                  <div class="w3-col m6 w3-large w3-margin-bottom">
-                      <i class="fa fa-envelope" style="width:30px"></i>
-                      Email: info@buenacosecha.com.ar<br>
-                  </div>
-              </div>
-          </div>
+        <footer class="w3-container w3-padding-16 w3-center w3-opacity w3-light-grey w3-xlarge w3-center">
+            <div class="w3-container w3-content w3-padding-16" style="max-width:800px">
+                <h2 class="w3-wide w3-center">CONTACTO</h2>
+                <div class="w3-col m6 w3-large w3-margin-bottom">
+                    <i class="fa fa-envelope" style="width:30px"></i>
+                    info@buenacosecha.com.ar
+                </div>
+            </div>
 
             <ul>
                 <li class="w3-hide-small w3-right">
