modificando botonera de redes sociales en el footer

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -70,7 +70,7 @@
                 </a>
             </li>
             <li class="w3-hide-small w3-right">
-                <a href="https://www.youtube.com/buenacosecha" target="_blank">
+                <a href="https://www.youtube.com/channel/UClUAerSDxrXUJON4TXJIing" target="_blank">
                     <i id="social-yt" class="fa fa-youtube-play fa-3x social"></i>
                 </a>
             </li>
@@ -145,7 +145,7 @@
                     </a>
                 </li>
                 <li class="w3-hide-small w3-right">
-                    <a href="https://www.youtube.com/buenacosecha" target="_blank">
+                    <a href="https://www.youtube.com/channel/UClUAerSDxrXUJON4TXJIing" target="_blank">
                         <i id="social-yt" class="fa fa-youtube-play fa-2x social"></i>
                     </a>
                 </li>
