modificando botonera de redes sociales en el footer

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -129,27 +129,27 @@
                     info@buenacosecha.com.ar
                 </div>
             <ul>
-                <li class="w3-hide-small w3-right">
+                <li class="w3-hide-small">
                     <a href="mailto:info@buenacosecha.com.ar?subject=contacto" target="_blank">
                         <i id="social-em" class="fa fa-envelope-square fa-2x social"></i>
                     </a>
                 </li>
-                <li class="w3-hide-small w3-right">
+                <li class="w3-hide-small">
                     <a href="https://www.instagram.com/buenacosechaska" target="_blank">
                         <i id="social-in" class="fa fa-instagram fa-2x social"></i>
                     </a>
                 </li>
-                <li class="w3-hide-small w3-right">
+                <li class="w3-hide-small">
                     <a href="https://www.youtube.com/channel/UClUAerSDxrXUJON4TXJIing" target="_blank">
                         <i id="social-yt" class="fa fa-youtube-play fa-2x social"></i>
                     </a>
                 </li>
-                <li class="w3-hide-small w3-right">
+                <li class="w3-hide-small">
                     <a href="https://www.twitter.com/buenacosechaska" target="_blank">
                         <i id="social-tw" class="fa fa-twitter-square fa-2x social"></i>
                     </a>
                 </li>
-                <li class="w3-hide-small w3-right">
+                <li class="w3-hide-small">
                     <a href="https://www.facebook.com/buenacosechabanda/" target="_blank">
                         <i id="social-fb" class="fa fa-facebook-square fa-2x social"></i>
                     </a>
